[*] Fonts and styles added

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,19 @@
-h1 {
-  color: orange;}
+
+// Base
+@import "base/variables";
+@import "base/colors";
+@import "base/mixins";
+
+// Vendors
+@import url('https://fonts.googleapis.com/css?family=Catamaran:200,400,700,800&subset=latin-ext');
+@import "node_modules/flexboxgrid-sass/flexboxgrid.scss";
+@import "node_modules/sass-css3-mixins/css3-mixins.scss";
+@import "vendors/quotaticons";
+
+// Components
+@import "components/buttons";
+@import "components/forms";
+@import "components/inputs";
+
+// Layout
+@import "layout/default";
