--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -8,8 +8,7 @@
         label {
             font-size: 1rem;
             font-weight: 400;
-            line-height: 1.2;
-            //text-align: right;
+            line-height: 1;
 
             display: none;
         }
@@ -18,10 +17,12 @@
             width: 100%;
             background: none;
             border: none;
+            font-family: 'Catamaran', sans-serif;
             font-size: 2rem;
             font-weight: 800;
+            color: $color-txt;
             text-align: inherit;
-            line-height: 1.5;
+            line-height: 1.65;
             border-bottom: 1px solid $gray;
             @include transition(all 250ms ease);
 
@@ -39,6 +40,7 @@
             width: auto;
             height: 2rem;
             background: $gray-light;
+            color: $color-txt;
             border: none;
             display: inline-block;
             cursor: pointer;
@@ -65,6 +67,7 @@
             }
 
             span {
+                font-family: 'Catamaran', sans-serif;
                 font-size: 1rem;
                 font-weight: 700;
                 text-transform: uppercase;
