--- a/src/styles/layout/_pages.scss
+++ b/src/styles/layout/_pages.scss
@@ -8,30 +8,44 @@ body.page {
 
         h1 {
             color: $color-bg;
-            @include transition(all 250ms ease);
 
             a {
                 color: $color-bg;
-            }
+                display: inline-block;
 
-            &:hover {
-                @include transform( scale(1.1) );
+                &:hover {
+                    @include transform( scale(1.1) );
+                }
             }
         }
     }
 
+    footer {
+        display: none;
+    }
+
     main {
         height: auto;
-        overflow: visible;
+        overflow-x: hidden;
         padding-top: 0;
+        padding-bottom: 0;
+        margin-bottom: -2rem;
+
+        .row {
+            //width: 100%;
+        }
 
         h1, h2, h3,
         h4, h5, h6 {
             margin-top: 2rem;
 
             &:first-child {
-                margin-top: .5rem;
+                margin-top: 0;
             }
+        }
+
+        h1 {
+            margin-bottom: 1rem;
         }
 
         p {
@@ -42,13 +56,42 @@ body.page {
             }
         }
 
+        a {
+            text-decoration: underline;
+            color: inherit;
+
+            &:hover {
+                //font-weight: 700;
+                color: darken($color-main, 20%);
+            }
+        }
+
+        ul {
+            list-style: square;
+            margin: -.5rem 0 .5rem;
+
+            li {
+                margin-left: 2rem;
+            }
+        }
+
+        span {
+            font-size: .9rem;
+            font-weight: 200;
+            margin-top: 3rem;
+            margin-bottom: 2rem;
+            display: block;
+        }
+
+        .last-sm {
+            padding-bottom: 6rem;
+        }
+
         nav {
             font-size: 2rem;
             font-weight: 200;
 
             background: darken($green, 10%);
-            margin-top: 2rem;
-            margin-bottom: -2rem;
             padding-top: 1rem;
             padding-bottom: 1rem;
 
@@ -57,15 +100,18 @@ body.page {
                 margin: .5rem 0;
 
                 li {
+                    margin: 0;
 
                     a {
                         width: 100%;
+                        text-decoration: none;
                         color: $color-bg;
                         display: block;
                         margin: .5rem 0;
 
                         &:hover {
-                            margin-left: 1rem;
+                            color: $color-bg;
+                            @include transform(translateX(1rem));
                         }
                     }
 
@@ -88,8 +134,6 @@ body.page {
 
             nav {
                 background: none;
-                margin-top: 0;
-                margin-bottom: 0;
                 padding-top: 0;
                 padding-bottom: 0;
 
