Added 'fonts' and changed some scripts on package.json

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,8 +6,8 @@
 
 // Vendors
 @import url('https://fonts.googleapis.com/css?family=Catamaran:200,400,700,800&subset=latin-ext');
-@import "../../node_modules/flexboxgrid-sass/flexboxgrid";
-@import "../../node_modules/sass-flex-mixin/flex";
+@import "../../node_modules/flexboxgrid-sass/flexboxgrid.scss";
+@import "../../node_modules/sass-css3-mixins/css3-mixins.scss";
 @import "vendors/quotaticons";
 
 // Components
