--- a/src/assets/styles/base/_mixins.scss
+++ b/src/assets/styles/base/_mixins.scss
@@ -18,6 +18,12 @@
     }
 }
 
+@mixin breakpoints-xl() {
+    @media only screen and (min-width: 100em) {
+        @content;
+    }
+}
+
 // font-smoothing
 @mixin font-smoothing($value: antialiased) {
     text-rendering: auto;
