--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -12,6 +12,7 @@
 
 // Components
 @import "components/buttons";
+@import "components/currencies";
 @import "components/forms";
 @import "components/inputs";
 
